# From-Scratch

./: .gitignore  README.md
Core-Data-Structures/AVLTree/src/: AVLTree.tpp
Core-Data-Structures/AVLTree/tests/: testsuite_01.cpp  testsuite_03.cpp
Core-Data-Structures/LinkedList/: CMakeLists.txt
Core-Data-Structures/LinkedList/src/: LLNode.tpp
Core-Data-Structures/LinkedList/tests/: testsuite_02.cpp
Data-Structures/AVLTree/: CMakeLists.txt  README.md
Data-Structures/AVLTree/src/: AVLTree.hpp  AVLTree.tpp  TreeNode.hpp  TreeNode.tpp
Data-Structures/AVLTree/tests/: CMakeLists.txt  testsuite_02.cpp  testsuite_04.cpp  testsuite_05.cpp  testsuite_06.cpp
Data-Structures/LinkedList/: README.md
Data-Structures/LinkedList/src/: LLNode.hpp  LinkedList.hpp  LinkedList.tpp
Data-Structures/LinkedList/tests/: CMakeLists.txt  testsuite_01.cpp  testsuite_03.cpp  testsuite_04.cpp  testsuite_05.cpp  testsuite_06.cpp  testsuite_07.cpp  testsuite_08.cpp  testsuite_09.cpp
